--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -1,4 +1,16 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/asdfghy6/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/10.jpg" title="购物"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/asdfghy6/1/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="https://git.io/fjHxp" rel="nofollow">大纪元</a> | <a href="https://git.io/fjHxh" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="https://git.io/fjHpJ" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="https://git.io/fjHpk" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="https://git.io/fjHpL" rel="nofollow">看中国</a> | <a href="https://git.io/fjHpt" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="https://git.io/fjHpm" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="https://git.io/fjHpO" rel="nofollow">新唐人</a> | <a href="https://git.io/fjHps" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>大陆政治</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/asdfghy6/yh/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/asdfghy6/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/asdfghy6/fq/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/asdfghy6/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543198.md#1" target="_blank">向警车扔汽油弹 疑似香港警察自导自演</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1908310905192188-150x120.jpg" align ="left"></a>9月21日晚上，有多名身穿黑衣的抗议者在香港元朗区向警车投掷汽油弹，其中一人被拍到身上有闪光灯，疑似警察之间的辨识装置，此人因而被认为是试图栽赃抗议者的卧底警察。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 6:10 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543044.md#1" target="_blank">国际特赦组织：中共以国安为由压迫香港人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11543044.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/140429083343100311-150x120.jpg" align ="left"></a>人权团体国际特赦组织（Amnesty International）在周二（9月24日）发表的报告中指出，香港反送中运动这个最新的证明显示，中共多年来基于“国家安全”的政策和言论，导致越来越多香港活动人士和记者被审查、起诉和骚扰，其人权与自由已经受到侵蚀。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:44 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542595.md#1" target="_blank">叶选平去世 广东官场“客家帮”终结</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542595.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/27-02_m1-1-600x400-1-1-150x120.jpg" align ="left"></a>中共已故元老叶剑英之子叶选平去世，外界指，这标志着广东官场“客家帮”崩落。此前，大批“客家帮”官员落马，包括前广州市委书记万庆良等“客家帮”典型成员。
+
+叶选平9月17月在广州去世，终年94岁。23日，其遗体告别式在广州举行。
+
+中共官场历来帮派林立。广东官场更是派系严重，可分为广府帮（即粤语帮）、梅州客家帮、潮汕帮和外来帮四大派系。其中又以1949.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 4:18 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542704.md#1" target="_blank">涉贪污受贿 呼和浩特中院前院长被双开</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542704.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/dongbinghui-Web-Banner-1200x800-v3-150x120.jpg" align ="left"></a>近期中共内蒙古政法系统官员频频出事。中共内蒙古呼和浩特市中级法院前党组书记、院长董秉惠日前被“双开”并移送司法。董秉惠被指涉贪污，拿司法权做交易，受贿等。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 3:22 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542748.md#1" target="_blank">哈尔滨政协主席姜国文落马</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542748.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/faace5359af016f444449c9d89df3633-150x120.jpg" align ="left"></a>9月24日，中共中纪委国家监委消息称，哈尔滨市政协主席姜国文被调查。姜国文曾任10年纪委书记。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 2:43 PM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11542073.md#1" target="_blank">为何中方代表团取消访问农业州 姆钦给答案</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11542073.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/03/56f3826f7ee69859f93c8a8219bc9de7-150x120.jpg" align ="left"></a>美国财政部长史蒂芬·姆努钦（Steven Mnuchin）周一（9月23日）证实，应美方要求、中方贸易代表团上周取消了对美国农业州的访问。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 8:50 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541164.md#1" target="_blank">《切尔诺贝利》夺得艾美奖迷你剧最佳剧集</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541164.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1176464552-150x120.jpg" align ="left"></a>旨在揭开史上最惨烈核灾背后真相的《切尔诺贝利》（Chernobyl，港译：切尔诺贝尔，台译：核爆家园），23日晚夺得艾美奖”迷你剧及电视电影类““最佳剧集”等三项大奖。荣膺最佳编剧的克雷格·麦辛（Craig Mazin）在获奖感言中表示：“如果这部剧能够小小地提醒大家，让大家注意到真相的价值和谎言的危险，我们就足以感到欣慰。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 8:49 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11542076.md#1" target="_blank">中共鼓励“吹哨人” 打土豪的集结号？</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11542076.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/05/901030014061944_meitu_1-150x120.jpg" align ="left"></a>中共国务院近日发布文件鼓励企业建立“吹哨人”和内部举报人制度。有评论人士告诉自由亚洲电台，中国的吹哨人不是举报非法行为的“吹哨人”，而是一场新的政治运动的“吹哨人”，是掠夺私营企业家，打土豪分田地的一个集结号。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 8:00 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541603.md#1" target="_blank">【新闻看点】真假记者？付国豪获奖10万再惹疑</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541603.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/GettyImages-1161630648-150x120.jpg" align ="left"></a>9月22日付国豪被中共以“香港报导”为由奖励了10万人民币。中共官媒《环球时报》微博称，付国豪就职环球网，属于典型“北漂”。消息传出，又一次引起了人们的注意。人们注意的是，付国豪究竟是什么身份？是不是被打就有钱拿？种种诡异再次被翻出来。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:46 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541838.md#1" target="_blank">美议员提法案 促查中共渗透UN及多边组织</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541838.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/UN_Members_Flags2-150x120.jpg" align ="left"></a>周一（9月23日），全球领导人聚焦联合国之际，美国参议院外交关系委员会的两位参议员托德·扬（Todd Young）和杰夫·默克利（Jeff Merkley）提出一项法案，该法案指示美国国家情报局局长审查中共在联合国及其他国际组织中的活动。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:37 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540914.md#1" target="_blank">进驻私企代表曝光 分析指中共严控资金外逃</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540914.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/EFIJiP5UEAQUELn-150x120.jpeg" align ="left"></a>杭州市向民企派“政府事务代表”引起外界关注后，派驻官员的部分名单再被曝光。民间猜测这是新一轮公私合营的信号，但专家认为更多的是中共直接监控防止他们资金外逃，确保中共贸易战下的政权安全。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 7:08 AM							</td></tr>
@@ -21,16 +33,12 @@
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540305.md#1" target="_blank">中共突取消访问美农场 外界猜测三种原因</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540305.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/08/000_1J80ZR-600x400-2-150x120.jpg" align ="left"></a>上周的美中两国在华盛顿贸易会谈结束时，中方官员取消了对蒙大拿和内布拉斯加州农场的访问，一时间引起美股下跌，各种猜测频出。这到底是怎么回事呢？截止到9月23日，外界对此给予了三种主要的不同解读。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:50 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539095.md#1" target="_blank">欧洲器官移植大会 中共活摘器官引专家热议</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539095.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/1.-ESOT-150x120.png" align ="left"></a>9月15日至18日，2019年欧洲器官移植学会大会在丹麦首都哥本哈根的贝拉中心（Bella Center）举办。坐落在哥本哈根市郊的贝拉中心是斯堪的纳维亚的第二大展览和会议中心。会议上，有关中共的器官掠夺和活摘器官等话题再引专家关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:42 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540026.md#1" target="_blank">安邦前董事长吴小晖杭州4别墅被7折拍卖</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11540026.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/06/wu-xiaohui1-VCG111113690722-150x120.jpg" align ="left"></a>中共已故党魁邓小平前外孙女婿、安邦保险集团前董事长吴小晖，其名下4套位于浙江杭州城西的别墅，今日（9月23日）被放在淘宝网上拍卖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:20 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539640.md#1" target="_blank">深圳地铁线试行刷脸进站 民众忧隐私不保</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539640.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/02/0000-VCG111144228397-150x120.jpg" align ="left"></a>继广州4个地铁站试行“刷脸”进出闸口后，上周五（9月20日）深圳地铁11号线也开始试行人脸识别技术系统。年满60岁的老人、残疾人士等免票人士实名注册后，可“刷脸”免费进出站。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:57 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539807.md#1" target="_blank">会说流利中文 博明将出任川普副国安顾问</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539807.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-872381484-150x120.jpg" align ="left"></a>美国总统川普（特朗普）刚任命的国家安全顾问奥布莱恩（Robert O’Brien）在周日（9月22日）证实，现任国家安全会议亚洲事务资深主任的博明（Matt Pottinger）将出任副国家安全顾问一职，亦即担任他的副手。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 12:28 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539358.md#1" target="_blank">向萨尔瓦多大撒钱 中共暗中交易内幕曝光</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539358.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/Salon_Azul-150x120.jpg" align ="left"></a>一年多前，住在萨尔瓦多“Isla Perico”岛上的家庭每户被提供7,000美元，让他们打包搬到内陆去。中共要在这里建经济特区，此举引发岛民的质疑。岛民为何质疑、中共提出的条件又是什么？《纽约时报》9月21日发文披露了内幕。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 9:26 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539403.md#1" target="_blank">孟晚舟案惊醒加国 跟中共接触政策彻底失败</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539403.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1142305061-150x120.jpg" align ="left"></a>华为首席财务官孟晚舟下周一将再回法庭，试图抵抗被加拿大引渡至美国受审的命运。中共为营救这位准红色公主也使出各种招数，让加拿大人看清中共多年来对加拿大布下的暗线。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 8:10 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539083.md#1" target="_blank">遭五毛造谣逃亡北美 港歌手黄耀明IG表心声</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539083.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/yaominhuang_meitu_1-150x120.jpg" align ="left"></a>长期遭中共封杀的香港歌手黄耀明，即将开启为期一周的美加巡演。刚刚离开香港的他，被五毛说成是“逃亡”。22日晚，已到达美国的黄耀明在Instagram（IG）辟谣：“北美巡演过后，我又会回到最爱的香港，跟大家并肩同行。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 8:02 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539367.md#1" target="_blank">范冰冰自拍影片：经历了想不到的困难与痛苦</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539367.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2018/10/GettyImages-688729168-150x120.jpg" align ="left"></a>大陆女星范冰冰9月16日低调度过38岁生日，沉默几天之后，她在微博粉丝专页贴出自拍影片，首次透露“经历了可能大家想不到的困难和痛苦”，并感谢粉丝对的支持和鼓励。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 7:42 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539299.md#1" target="_blank">蓬佩奥要各国勿听令中共 停止遣返维族人</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539299.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/GettyImages-1153801487-1-150x120.jpg" align ="left"></a>美国国务卿蓬佩奥要求中亚各国不要再听令中共，向中国遣返维吾尔人。一旦被遣返，他们将受到中共迫害。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:05 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539220.md#1" target="_blank">叶剑英之子叶选平追悼仪式现场事先曝光</a><br></h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11539220.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/09/7e39ab81b6e2c10aed9a2f09b26077a4-150x120.png" align ="left"></a>9月23日中共已古的元老叶剑英的长子、中共全国政协副主席、前广东省省长叶选平追悼会将于9月23日在广州殡仪馆举行，大纪元事先获得追悼会现场视频，显示中共各派都有送花圈。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 3:25 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/24/n11542450.md#1" target="_blank">10.1前中共常委参观展览 卸任高层缺席</a><br></h3>9月23日，中共为篡政70周年庆典搞的展览在北京开幕，习近平等六名中共政治局常委前去参观，中共卸任高层缺席。中共篡政50、60周年的展览上，卸任的中南海高层均现身。
+
+习近平在讲话中引用毛泽东的词句“而今迈步从头越”，被外界视为是暗示中共当前面临形势凶险。
+
+除了正在外访的栗战书外，习近平、李克强、汪洋、王沪宁、赵乐际、韩正等六名政治局常委，以及国家.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 1:09 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11541542.md#1" target="_blank">违规持股受贿淫乱 涉军工集团原老总被双开</a><br></h3>落马一年多后，中国工程物理研究院应用技术研究发展中心原主任、四川久远投资控股集团有限公司原董事长邓全农日前被“双开”并移送司法。邓全农被指违规持股、买卖股票获利，收受、索要贿赂，长期淫乱等。邓全农牵涉中共四川的核武制造基地。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月24日 6:44 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/23/n11539988.md#1" target="_blank">内蒙古两厅官被查处 皆涉犯罪</a><br></h3>9月23日，两名内蒙古自治区官员被查处，其中退休官员苏建荣被开除中共党籍，另一官员被双开；两人皆涉犯罪被移送起诉。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 4:56 PM							</td></tr>
-<tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/19/9/22/n11538896.md#1" target="_blank">中共炫耀中所建交 分析:台湾的自由最具价值</a><br></h3>9月22日，太平洋所罗门群岛与台湾中断外交关系后，与中共建交。中共喉舌以此作为自己70年建政的政绩并唱衰台湾，中共外长还上升必定统一台湾的高度。网友纷纷反击称台湾免签证国家有一百多个，中共党国只有寥寥数十个不起眼的国家，免签证多才是实力。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年09月23日 1:20 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/asdfghy6/djy/blob/master/gb/ncid277_2.md#1<br><a href="https://github.com/asdfghy6/djy/blob/master/gb/ncid277_2.md#1"><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=10&t=&d=https://github.com/asdfghy6/djy/blob/master/gb/ncid277_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_2.htm">http://www.epochtimes.com/gb/ncid277_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
